@@ -1,5 +1,6 @@
 package com.djm.inventa.core.i18n;
 
+import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.text.MessageFormat;
@@ -9,7 +10,7 @@ import java.util.concurrent.ConcurrentHashMap;
 public final class I18nManager {
 
     private static volatile I18nManager INSTANCE;
-    private Locale locale = new Locale("es");
+    private Locale locale = Locale.of("es");
 
     // Claves de módulos específicos (ventas, compra, etc.)
     private final Map<String, String> messages = new ConcurrentHashMap<>();
@@ -51,7 +52,7 @@ public final class I18nManager {
                 getInstance().registerModuleDev(moduleId, idBundle, moduleLoader);
             }
 
-            System.out.println("[I18n-DEV] Inicializado para módulo: " + moduleId);
+            //System.out.println("[I18n-DEV] Inicializado para módulo: " + moduleId);
 
         } catch (Exception e) {
             System.err.println("[I18n-DEV] Error: " + e.getMessage());
@@ -61,14 +62,14 @@ public final class I18nManager {
     // registerModule carga en messages
     public void registerModule(String moduleId, String idBundle, ClassLoader classLoader) {
         // ✅ Sin paquete completo — busca lang/ocompra_es.properties en la raíz del JAR
-        System.out.println("Registering module: " + moduleId);
+        //System.out.println("Registering module: " + moduleId);
         tryLoadBundle(moduleId, "lang." + idBundle, classLoader, messages);
     }
 
     // registerModule carga en messages
     public void registerModuleDev(String moduleId, String idBundle, ClassLoader classLoader) {
         // ✅ Sin paquete completo — busca lang/ocompra_es.properties en la raíz del JAR
-        System.out.println("Registering module: " + moduleId);
+        //System.out.println("Registering module: " + moduleId);
         tryLoadBundle(moduleId, "lang_dev." + idBundle, classLoader, messages);
     }
 
@@ -84,8 +85,7 @@ public final class I18nManager {
             for (String key : bundle.keySet()) {
                 target.putIfAbsent(key, bundle.getString(key));
             }
-            System.out.printf("[I18n] ✅ '%s' → %d claves%n",
-                    baseName, bundle.keySet().size());
+            //System.out.printf("[I18n] ✅ '%s' → %d claves%n",baseName, bundle.keySet().size());
         } catch (MissingResourceException e) {
             System.err.printf("[I18n] ⚠ No encontrado: '%s' en '%s'%n", baseName, moduleId);
         }
@@ -98,7 +98,7 @@ public final class I18nManager {
         value = globalMessages.get(key);
         if (value != null) return value;
 
-        System.err.printf("[I18n] ⚠ Clave no encontrada: '%s'%n", key);
+        //System.err.printf("[I18n] ⚠ Clave no encontrada: '%s'%n", key);
         return null;
     }
 
@@ -155,10 +155,11 @@ public final class I18nManager {
     private static URL resolveJarUrl(URL resource, String path) throws Exception {
         String full = resource.toString();
         if (full.startsWith("jar:")) {
-            return new URL(full.replace("!/" + path, "!").replace("jar:", ""));
+            return URI.create(full.replace("!/" + path, "!").replace("jar:", "")).toURL();
         }
         // En dev (carpeta de clases, no JAR)
         String base = full.replace(path.replace("/", "/"), "");
-        return new URL(base);
+
+        return URI.create(base).toURL();
     }
 }
